<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityConfigure"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorTxtPrimary"
        android:textSize="@dimen/text_size_heading"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/act_config_txt_title"/>

    <TextView
        android:id="@+id/label_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_small"
        android:text="@string/act_config_txt_info"
        android:layout_margin="5dp"
        android:textColor="@color/colorTxtPrimary"/>

    <Button
        android:id="@+id/btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTxtPrimary"
        android:textSize="@dimen/text_size_normal"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/act_config_btn_login"/>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_margin"
        android:id="@+id/lay_configurations">

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:layout_margin="5dp"
            android:visibility="gone"
            android:textColor="@color/colorTxtPrimary"/>

        <TextView
            android:id="@+id/lable_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTxtPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="@string/act_config_txt_title_board"/>
        <Spinner
            android:id="@+id/spiner_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/lable_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTxtPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/act_config_txt_title_todo"
            android:visibility="gone"/>
        <Spinner
            android:id="@+id/spiner_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/lable_doing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTxtPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/act_config_txt_title_doing"
            android:visibility="gone"/>
        <Spinner
            android:id="@+id/spiner_doing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/lable_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTxtPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/act_config_txt_title_done"
            android:visibility="gone"/>
        <Spinner
            android:id="@+id/spiner_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_configure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@color/colorAccent"
            android:textColor="@color/colorTxtPrimary"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/act_config_btn_configure"/>

    </LinearLayout>
</ScrollView>
</LinearLayout>
